name surname aligned vertically, background fixed

--- a/src/individual/pages/Login/login_style.css
+++ b/src/individual/pages/Login/login_style.css
@@ -288,12 +288,17 @@
 }
 
 .LoginPage{
-  position:fixed;
-  left: 0;
-  top: 0;
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
   width:100%;
   background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
+  background-color: #464646;
+  background-attachment: fixed;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 0%,rgba(255, 255, 255, 0.3) 100%), url('https://cdn.wallpapersafari.com/95/25/Ae7kpY.jpg');
 }
 .gdpr {
